[package]
name = "daxa"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
byteorder = "1.4"
crc32fast = "1.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.3", features = ["derive"] }

# Performance & I/O
memmap2 = "0.9"
zstd = "0.13"
lz4_flex = "0.11"

# Encryption (stubs for now, real crates would be ring, aes-gcm etc.)
# rand = "0.8" # For key generation, IVs

# FFI
libc = "0.2"

# GUI (Qt via cxx-qt)
cxx = "1.0"
cxx-qt = "0.6"
cxx-qt-lib = "0.6"

[build-dependencies]
bindgen = "0.69"
cxx-qt-build = "0.6"

# For CLI binary
[[bin]]
name = "daxa"
path = "src/main.rs"

[lib]
name = "daxa_lib"
path = "src/lib.rs"